# Maze3d-2

./: CMakeLists.txt  main.cpp
.VSCodeCounter/2020-12-20_14-08-28/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-21_15-14-51/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-01-11_18-07-39/: details.md  results.csv  results.md  results.txt
figures/: plane.cpp
include/assimp/: config.h
include/glad/: glad.h
src/: filetree.txt  glad.c  tree.txt
src/baseTypes/: disk_file_text_res.cpp  disk_file_text_res.hpp  resource.cpp  resource.hpp
src/engine/baseTypes/: color.cpp  color.hpp  resource.cpp  resource.hpp  resourceManager.hpp  scene.cpp  scene.hpp  script.hpp
src/engine/baseTypes/containers/: Image.cpp  Image.hpp  assimpMesh.hpp  mesh.cpp  mesh.hpp
src/engine/baseTypes/gui/: basicTextRender.cpp  basicTextRender.hpp  basicTexturedRect.hpp  button.cpp  button.hpp  fullscreenBox.cpp  fullscreenBox.hpp  gui.cpp  gui.hpp  guiObject.cpp  guiObject.hpp  guiShaderType.hpp  guiWindow.cpp  guiWindow.hpp  justRect.cpp  (+6 more)
src/engine/render/: camera.cpp  camera.hpp  drawable.cpp  drawable.hpp  drawableHolder.cpp  drawableHolder.hpp  easyLineRender.cpp  easyLineRender.hpp  mesh.hpp  render.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/engine/utilities/: debug.hpp  fileLoader.cpp  fileLoader.hpp
src/game/: game_scene_enum.hpp  gameprocess.cpp  gameprocess.hpp  testScene.cpp  testScene.hpp
src/game/player/: player.cpp  player.hpp
src/render/: shader.cpp  shader.hpp
src/utilities/: scene.hpp  script.hpp
(+73 files in other folders)
